--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
     <script src="./lib/out.js" charset="utf-8"></script>
     <script src="./grimoire-physics.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <script id="main" type="text/goml" src="./index.goml"></script>
+    <div class="header-container">
+        <img src="./niconico.png" alt="logo" width="128" height="128">
+        <h1>質疑応答</h1>
+    </div>
+    <div class="url-container">
+        <img src="./logo.png" alt="logo" width="128" height="128">
+        <h1>https://grimoire.gl/</h1>
+    </div>
 </body>
 
 </html>
